--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
     <link rel="stylesheet" type="text/css" href="site-assets/css/prism.css" />
     <link rel="stylesheet" type="text/css" href="site-assets/css/style.css" />
     <link rel="stylesheet" type="text/css" href="site-assets/css/media.css" />
-
-    <!-- <script src="https://prismjs.com/assets/vendor/prefixfree.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/components/prism-core.min.js"></script> -->
   </head>
 
   <body>
@@ -79,7 +76,7 @@
                 <ul class="links">
                   <li>
                     <a
-                      href="https://github.com/orgs/fonoster/discussions/699"
+                      href="https://docs.fonoster.com/"
                       target="_blank"
                       class="focus-outline"
                     >
@@ -92,21 +89,6 @@
                       Documentation</a
                     >
                   </li>
-                  <!-- <li>
-                    <a
-                      href="https://marketplace.fonoster.com/"
-                      target="_blank"
-                      class="focus-outline"
-                    >
-                      <div class="icon">
-                        <img
-                          src="site-assets/images/icons/new-tab.svg"
-                          class="svg"
-                        />
-                      </div>
-                      Marketplace</a
-                    >
-                  </li> -->
                   <li>
                     <a
                       href="https://discord.gg/4QWgSz4hTC"
@@ -147,7 +129,7 @@
                   >Log in</a
                 >
                 <a
-                  href="https://github.com/orgs/fonoster/discussions/699"
+                  href="https://form.typeform.com/to/sDv75mFr"
                   target="_blank"
                   class="btn btn-primary"
                   >Get Started</a
@@ -201,8 +183,8 @@
               </p>
             </div>
             <div class="btn-wrap">
-              <a href="https://github.com/orgs/fonoster/discussions/699" class="btn btn-primary">Get Started</a>
-              <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow">
+              <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary">Get Started</a>
+              <a href="https://docs.fonoster.com/" class="btn-arrow">
                 Documentation
                 <div class="icon">
                   <img
@@ -229,7 +211,7 @@
               Build voice applications for your business, today.
             </h2>
             <div class="btn-wrap">
-              <a href="https://github.com/orgs/fonoster/discussions/699" class="btn btn-primary">Get Started</a>
+              <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary">Get Started</a>
             </div>
           </div>
 
@@ -250,7 +232,7 @@
                     for verbs like Play, Say, Gather, etc.
                   </p>
                   <div class="btn-wrap">
-                    <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow btn-alt"
+                    <a href="https://docs.fonoster.com/" class="btn-arrow btn-alt"
                       >Learn More
                       <div class="icon">
                         <img
@@ -278,7 +260,7 @@
                     based in OAuth2 and JWT tokens.
                   </p>
                   <div class="btn-wrap">
-                    <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow btn-alt"
+                    <a href="https://docs.fonoster.com/concepts/identity-and-tokens" class="btn-arrow btn-alt"
                       >Learn More
                       <div class="icon">
                         <img
@@ -306,7 +288,7 @@
                     user them later for analysis.
                   </p>
                   <div class="btn-wrap">
-                    <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow btn-alt"
+                    <a href="https://docs.fonoster.com/" class="btn-arrow btn-alt"
                       >Learn More
                       <div class="icon">
                         <img
@@ -333,7 +315,7 @@
                       Use the SDKs in the Browser or NodeJS application
                     </p>
                     <div class="btn-wrap">
-                      <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow"
+                      <a href="https://docs.fonoster.com/concepts/sdks" class="btn-arrow"
                         >Learn More
                         <div class="icon">
                           <img
@@ -355,7 +337,7 @@
                       your applications.
                     </p>
                     <div class="btn-wrap">
-                      <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow"
+                      <a href="https://docs.fonoster.com/" class="btn-arrow"
                         >Learn More
                         <div class="icon">
                           <img
@@ -371,13 +353,13 @@
               <div class="swiper-slide">
                 <div class="card">
                   <div class="inner">
-                    <p class="title">Google Speech APIs</p>
+                    <p class="title">Speech APIs</p>
                     <p class="desc">
                       Unlock Text-to-Speech and Automatic Speech Recognition 
                       potential in your apps.
                     </p>
                     <div class="btn-wrap">
-                      <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-arrow"
+                      <a href="https://docs.fonoster.com/" class="btn-arrow"
                         >Learn More
                         <div class="icon">
                           <img
@@ -778,7 +760,7 @@ client.loginWithApiKey("your-api-key", "your-api-secret")
           </h2>
           <p class="large desc">Try us out and start building for free.</p>
           <div class="btn-wrap">
-            <a href="https://github.com/orgs/fonoster/discussions/699" class="btn btn-primary">Get Started</a>
+            <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary">Get Started</a>
           </div>
         </div>
       </div>
@@ -799,7 +781,7 @@ client.loginWithApiKey("your-api-key", "your-api-secret")
             <div class="right">
               Yes, you can self-host it and use your
               <span
-                ><a href="https://github.com/orgs/fonoster/discussions/699" class="btn-link btn-alt"
+                ><a href="https://docs.fonoster.com/self-hosting" class="btn-link btn-alt"
                   >Community Edition</a
                 ></span
               >
@@ -899,15 +881,15 @@ client.loginWithApiKey("your-api-key", "your-api-secret")
               <p class="footer-title accent">developers</p>
               <ul class="footer-links">
                 <li>
-                  <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-link btn-alt">Documentation</a>
+                  <a href="https://docs.fonoster.com/" class="btn-link btn-alt">Documentation</a>
                 </li>
 
                 <li>
-                  <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-link btn-alt">API Reference</a>
+                  <a href="https://docs.fonoster.com/" class="btn-link btn-alt">API Reference</a>
                 </li>
 
                 <li>
-                  <a href="https://github.com/orgs/fonoster/discussions/699" class="btn-link btn-alt">Guides</a>
+                  <a href="https://docs.fonoster.com/guides" class="btn-link btn-alt">Guides</a>
                 </li>
               </ul>
             </li>
