fix: add missing function bind

--- a/mods/sdk/public/index.html
+++ b/mods/sdk/public/index.html
@@ -25,4 +25,4 @@
   main().catch(console.error);
 </script>
 
-<h1>Check the console for the response!</h1>
+<pre>Check the console for the response!</pre>
