fix: remove username as a parameter for the loginWithOauth2Code

--- a/mods/sdk/public/oauth2.html
+++ b/mods/sdk/public/oauth2.html
@@ -10,11 +10,13 @@
 <body>
     <h1>GitHub OAuth2 Login</h1>
     <button id="loginButton">Login with GitHub</button>
-    <pre id="output">Check the console for the response!</pre>
+    <br />
+    <br />
+    <pre>Decoded Id Token:</pre>
+    <pre id="output">{}</pre>
 
     <script>
         const clientId = "09ae6a73c171c39d4924"; // Replace with your GitHub Client ID
-        const username = "user@example.com"; // Must be a valid email for a real GitHub user
         const redirectUri = window.location.origin + window.location.pathname;
         
         function loginWithGitHub() {
@@ -43,7 +45,7 @@
 
             try {
                 const client = new SDK.WebClient({ url: "http://localhost:8449" });
-                await client.loginWithOauth2Code("GITHUB", username, code);
+                await client.loginWithOauth2Code("GITHUB", code);
 
                 const decodedIdToken = jwt_decode(client.getIdToken());
                 
