--- a/mods/sdk/public/oauth2.html
+++ b/mods/sdk/public/oauth2.html
@@ -5,60 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub OAuth2 Login</title>
-  <script src="https://unpkg.com/@fonoster/sdk"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
 </head>
 
 <body>
   <h1>GitHub OAuth2 Login</h1>
-  <button id="loginButton">Login with GitHub</button>
+  <button id="getCode">Get OAuth2 Code from GitHub</button>
   <br />
   <br />
-  <pre>Decoded Id Token:</pre>
-  <pre id="output">{}</pre>
+  <pre id="output">OAuth2 Code:</pre>
 
   <script>
     const clientId = "176eada057a4bbd96736"; // Fonoster's Production GitHub Client ID
     const redirectUri = window.location.origin + window.location.pathname;
 
-    function loginWithGitHub() {
-      const authUrl = `https://github.com/login/oauth/authorize?client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&scope=read:user`;
+    function getCodeWithGitHub() {
+      const authUrl = `https://github.com/login/oauth/authorize?client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&scope=user:email`;
       window.location.href = authUrl;
     }
 
     async function main(retries = 5) {
-      // Wait for SDK to load
-      if (!window.SDK) {
-        if (retries > 0) {
-          console.warn("SDK not loaded yet, retrying...");
-          return setTimeout(() => main(retries - 1), 500);
-        }
-        console.error("Failed to load @fonoster/sdk");
-        return;
-      }
-
       const params = new URLSearchParams(window.location.search);
       const code = params.get("code");
 
       if (!code) {
-        document.getElementById("loginButton").style.display = "block";
+        document.getElementById("getCode").style.display = "block";
         return;
       }
 
       try {
-        const client = new SDK.WebClient();
-        await client.loginWithOauth2Code("GITHUB", code);
-
-        const decodedIdToken = jwt_decode(client.getIdToken());
-
-        document.getElementById("output").textContent = JSON.stringify(decodedIdToken, null, 2);
+        document.getElementById("output").textContent = "OAuth2 Code: " + code;
       } catch (e) {
         console.error(e);
         document.getElementById("output").textContent = "Error: " + e.message;
       }
     }
 
-    document.getElementById("loginButton").addEventListener("click", loginWithGitHub);
+    document.getElementById("getCode").addEventListener("click", getCodeWithGitHub);
     main().catch(console.error);
   </script>
 </body>
