--- a/mods/sdk/public/oauth2.html
+++ b/mods/sdk/public/oauth2.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub OAuth2 Login</title>
+  <title>Get GitHub OAuth2 Challenge Code</title>
 </head>
 
 <body>
-  <h1>GitHub OAuth2 Login</h1>
+  <h1>Get GitHub OAuth2 Challenge Code</h1>
   <button id="getCode">Get OAuth2 Code from GitHub</button>
   <br />
   <br />
