restoring storybook functionality and adding some remaining configuration, Improving the storybook and upgrading the version
Signed-off-by: Angel M. Bencosme <ing.angelebencosme@gmail.com>

--- a/mods/webui/.storybook/preview-head.html
+++ b/mods/webui/.storybook/preview-head.html
@@ -69,4 +69,12 @@
   .sbdocs :is(strong:not(.sb-anchor, .sb-unstyled, .sb-unstyled strong)) {
     font-weight: 700;
   }
+
+  /* Asegurarse de que los estilos de Material UI se apliquen correctamente */
+  .MuiButton-root {
+    text-transform: uppercase !important;
+    font-family: "Roboto Mono", monospace !important;
+  }
+
+  /* Eliminar los estilos forzados para permitir que el tema se aplique correctamente */
 </style>
