chore: implement toaster component with customizable toast notifications

--- a/mods/dashboard/.storybook/preview-head.html
+++ b/mods/dashboard/.storybook/preview-head.html
@@ -14,7 +14,7 @@
   rel="stylesheet"
 />
 <link
-  href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..700&display=swap"
   rel="stylesheet"
 />
 <style>
@@ -40,6 +40,10 @@
     -webkit-tap-highlight-color: transparent;
     text-rendering: optimizeLegibility;
     font-family: var(--font-sans);
+  }
+
+  [data-sonner-toast][data-styled="true"] [data-content] {
+    width: 100%;
   }
 
   #storybook-root {
