chore: update typeform link

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
               </div>
               <div class="btn-wrap header-btn">
                 <a
-                  href="https://form.typeform.com/to/sDv75mFr"
+                  href="https://form.typeform.com/to/bmDsKX8O"
                   target="_blank"
                   class="btn-link"
                   >Log in</a
                 >
                 <a
-                  href="https://form.typeform.com/to/sDv75mFr"
+                  href="https://form.typeform.com/to/bmDsKX8O"
                   target="_blank"
                   class="btn btn-primary"
                   >Get Started</a
@@ -183,7 +183,7 @@
               </p>
             </div>
             <div class="btn-wrap">
-              <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary">Get Started</a>
+              <a href="https://form.typeform.com/to/bmDsKX8O" class="btn btn-primary">Get Started</a>
               <a href="https://docs.fonoster.com/" class="btn-arrow">
                 Documentation
                 <div class="icon">
@@ -211,7 +211,7 @@
               Build voice applications for your business, today.
             </h2>
             <div class="btn-wrap">
-              <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary">Get Started</a>
+              <a href="https://form.typeform.com/to/bmDsKX8O" class="btn btn-primary">Get Started</a>
             </div>
           </div>
 
@@ -592,7 +592,7 @@ client.loginWithApiKey("your-api-key", "your-api-secret")
                       </ul>
 
                       <div class="btn-wrap">
-                        <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary btn-alt">Sign up</a>
+                        <a href="https://form.typeform.com/to/bmDsKX8O" class="btn btn-primary btn-alt">Sign up</a>
                       </div>
                     </div>
                   </div>
@@ -621,7 +621,7 @@ client.loginWithApiKey("your-api-key", "your-api-secret")
                       </ul>
 
                       <div class="btn-wrap">
-                        <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary btn-alt">Sign up</a>
+                        <a href="https://form.typeform.com/to/bmDsKX8O" class="btn btn-primary btn-alt">Sign up</a>
                       </div>
                     </div>
                   </div>
@@ -760,7 +760,7 @@ client.loginWithApiKey("your-api-key", "your-api-secret")
           </h2>
           <p class="large desc">Try us out and start building for free.</p>
           <div class="btn-wrap">
-            <a href="https://form.typeform.com/to/sDv75mFr" class="btn btn-primary">Get Started</a>
+            <a href="https://form.typeform.com/to/bmDsKX8O" class="btn btn-primary">Get Started</a>
           </div>
         </div>
       </div>
