fix: update to final url

--- a/voz-ia/index.html
+++ b/voz-ia/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://your-custom-url.com">
-    <link rel="canonical" href="https://your-custom-url.com">
+    <meta http-equiv="refresh" content="0; url=https://form.typeform.com/to/lswHnkGW">
+    <link rel="canonical" href="https://form.typeform.com/to/lswHnkGW">
     <script>
         // Immediate redirect for better user experience
-        window.location.replace("https://your-custom-url.com");
+        window.location.replace("https://form.typeform.com/to/lswHnkGW");
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://your-custom-url.com">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://form.typeform.com/to/lswHnkGW">click here</a>.</p>
 </body>
 </html>
